# agent-trust

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  TODO.md  package-lock.json  pyproject.toml  requirements-dev.txt
docs/: scoring-methodology.md
examples/: bad_agent.py  good_agent.py
plan/: 90-day-execution-plan.jsx  index.html  launch-strategy.jsx
src/agent_trust/: __init__.py  cli.py
src/agent_trust/capture/: __init__.py  openai_capture.py
src/agent_trust/guardrails/: __init__.py  _utils.py  base.py  citation.py  prompt_relevance.py  response_length.py  system_prompt.py  temperature_hallucination.py  tool_safety.py  uncertainty.py
src/agent_trust/report/: __init__.py  markdown.py
src/agent_trust/schemas/: __init__.py  guardrail.py  report.py  score.py  trace.py
src/agent_trust/scoring/: __init__.py  composite.py  consistency.py  efficiency.py  guardrails_score.py  hallucination.py  traceability.py
tests/: conftest.py  test_capture.py  test_guardrails.py  test_report.py  test_schemas.py  test_scoring.py
